# open-assitant

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  schedules.example.yaml  setup.sh
.claude/: settings.example.json  settings.json
.claude/skills/apple-notes/: SKILL.md
.claude/skills/apple-reminders/: SKILL.md
.claude/skills/avoid/: SKILL.md
.claude/skills/calibration/: SKILL.md
.claude/skills/find/: SKILL.md
.claude/skills/inbox/: SKILL.md
.claude/skills/memory/: SKILL.md
.claude/skills/note/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/project/: SKILL.md
.claude/skills/pulse/: SKILL.md
.claude/skills/update/: SKILL.md
.claude/skills/week/: SKILL.md
.claude/skills/whatsapp/: SKILL.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
baileys-bridge/: Dockerfile  index.js  package.json
docs/superpowers/plans/: 2026-03-14-life-assistant.md  2026-03-16-apple-notes-reminders-skills.md  2026-03-16-pulse-inbox-manager.md
docs/superpowers/specs/: 2026-03-13-life-assistant-design.md  2026-03-15-apple-notes-reminders-skills-design.md  2026-03-16-pulse-inbox-manager-design.md
open_assistant/: .env.example  README.md  __init__.py  _compose.py  cli.py  docker-compose.yaml  pyproject.toml  schedules.example.yaml  wizard.py
open_assistant/_data/: docker-compose.yaml
open_assistant/src/channels/: telegram.py
src/: config.py  main.py
src/agent/: core.py  session_store.py
src/channels/: telegram.py  telegram_notify.py  whatsapp.py
src/memory/: sync.py
src/scheduler/: scheduler.py
src/skills/: avoid.md  calibration.md  memory.md  note.md  plan.md  project.md  update.md  week.md
tests/: test_core_prompt.py  test_memory.py  test_memory_sync.py  test_missed_message.py  test_scheduler.py  test_schedules.py  test_skill_loader.py  test_telegram_commands.py
