[project]
name = "open-assistant"
version = "0.1.0"
description = "Google Workspace assistant via Telegram & WhatsApp, powered by Claude Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "python-telegram-bot>=21.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "anthropic>=0.84.0",
    "telegramify-markdown>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
open-assistant = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
