[project]
name = "open-assistant"
version = "0.1.0"
description = "Personal AI assistant on Telegram/WhatsApp, powered by Claude and Google Workspace"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["assistant", "telegram", "whatsapp", "claude", "google-workspace", "ai"]
dependencies = [
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    # Agent + channels
    "claude-agent-sdk>=0.1.48",
    "python-telegram-bot>=21.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "apscheduler>=3.10",
    # Config + data
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "anyio>=4.0",
    # Voice transcription
    "groq>=0.11.0",
    "openai>=2.28.0",
    # Telegram formatting
    "telegramify-markdown>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
open-assistant = "open_assistant.cli:main"

[project.urls]
Homepage = "https://github.com/ribeirorod/open-assitant"
Repository = "https://github.com/ribeirorod/open-assitant"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "open_assistant"]

[tool.hatch.build.targets.wheel.sources]
"open_assistant/_data" = "open_assistant/_data"
